# mortimer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NEWS.md  README.md  alfred.conf  main.py  pyproject.toml  requirements.txt  run.py  setup.py  wsgi.py
.github/workflows/: pre-commit.yml  pypi.yml  pytest.yml
deploy/docker/: .env.example  Dockerfile  README.md  alfred.conf  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  mortimer.conf  nginx-compose.yml  plan.md  requirements.app.in  run.py  start.sh  test.md  test.sh  wsgi.py
mortimer/: __init__.py  alfredo.py  celery.py  config.py  export.py  forms.py  models.py  mortimer.conf  routes.py  set_environ_vars.py  utils.py  views.py
mortimer/errors/: handlers.py
mortimer/local_experiments/: routes.py
mortimer/main/: routes.py
mortimer/static/: style.css
mortimer/templates/: about.html  account.html  base.html  create_experiment.html  create_local_experiment.html  experiment.html  experiment_config.html  experiment_export.html  experiment_form.html  experiment_list.html  experiment_log.html  experiment_script.html  export_form.html  futurize_script.html  home.html  import_form.html  impressum.html  index.html  layout.html  layout_experiment.html  layout_local_experiment.html  local_experiment.html  local_export.html  login.html  manage_resources.html  new_experiment_version.html  register.html  request_password_reset.html  reset_password.html  skeleton.html  update_experiment.html  upload_resources.html  uploads.html  user_experiments.html  web_export.html  (+1 more)
tests/: test_utils.py
(+114 files in other folders)
