[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "mortimer"
dynamic = ["version"]
description = "A web-appication for the administration of alfred experiments."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Christian Treffenstädt" },
  { name = "Paul Wiemann" },
  { name = "Johannes Brachem" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "alfred3>=3.0.2",
  "alfred3_interact>=0.4.1",
  "cryptography>=3.4",
  "email_validator>=1.1",
  "itsdangerous>=2.1.2",
  "flask>=1.1.2",
  "flask_bcrypt>=0.7.1",
  "flask_dropzone>=1.5.4",
  "flask_login>=0.5.0",
  "flask_mail>=0.9.1",
  "flask-wtf>=0.14.3",
  "pymongo>=3.10",
  "python-dotenv",
  "flask-mongoengine-3[wtf]>=1.1.0",
]

[dependency-groups]
dev = [
  "pytest",
  "pre-commit",
  "black",
  "flake8",
  "python-dotenv",
  "bs4",
  "mongomock",
]

[tool.hatch.version]
path = "src/mortimer/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mortimer"]
